# flower-32-

./: .gitignore  README.md  app.py  kursac1.db  main.py  pyproject.toml
api/: crud.py  shemas.py  views.py
core/: __init__.py  config.py  models.py
templates/: create_flower_result.html  delete_flower_result.html  flowers_for_country.html  index.html  list_flowers.html  list_flowers_for_suppliers.html  list_suppliers.html  list_vendors.html  seasonal_flowers.html  vendors.html
